<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_hello_anh_ta">Hello anh Ta</string>
    <string name="txt_hint_input_name">Input Name</string>
    <string name="txt_hint_input_number">Input Number</string>
    <string name="heading">ListData</string>
    <string name="loadButtonText">LoadData</string>
    <string name="txt_btn_switch">Switch</string>
    <string name="txt_hint_edt_title">Input Title</string>
    <string name="txt_hint_input_content">Input Content</string>
    <string name="txt_update">Update</string>
    <string name="txt_delete">Delete</string>
</resources>